--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -40,7 +40,7 @@ We added the related test name.
 | 15 | Leak Sensitive Input Data | LLM02 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm022025-sensitive-information-disclosure/) | Testing for Input Leakage |
 | 16 | Improper Output Handling | LLM05 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm052025-improper-output-handling/) | Testing for Unsafe Outputs |
 | 17 | Excessive Agency | LLM06 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm062025-excessive-agency/) | Testing for Agentic Behavior Limits |
-| 18 | System Prompt Leakage | LLM07 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm072025-system-prompt-leakage/) | Testing for Prompt Disclosure |
+| 18 | System Prompt Leakage | LLM07 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm072025-system-prompt-leakage/) | Testing for System Prompt Leakage |
 | 19 | Vector & Embedding Weaknesses | LLM08 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm082025-vector-and-embedding-weaknesses/) | Testing for Embedding Manipulation |
 | 20 | Misinformation | LLM09 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm092025-misinformation/) | Testing for Harmful Content Bias |
 
