--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -58,6 +58,6 @@ This guide **does not attempt to replace or duplicate** existing foundational se
 
 ---
 NEXT:
-2. [AI System Threat Modeling](2.AI-TM.md)
+Chapter 2. [Threat Modeling for AI Systems](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/1.2Objectives.md#:~:text=_Threat_Modeling_for_AI_Systems.md)
 
 [Table of Contents](/Document/README.md)
