--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -49,7 +49,7 @@ We added the related test name.
 NEXT:
 ---
 NEXT:
-2.2 [Identify AI System RAI and Trustworthy threats](RAI-TM.md)
+2.2 [Identify AI System RAI and Trustworthy threats](2.2_Identify_AI_System_RAI_and_Trustworthy_threats.md)
 
 [Table of Contents](/Document/README.md)
 
