--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -2,7 +2,7 @@
 
 # 2.1 Identify AI System Security threats
 
-We perform now a mapping between all the OWASP Security Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
+In this section we perform now a mapping between all the OWASP Security Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
 
 Our goal was to start mapping the onto concrete components of the architecture, as seen in this diagram:
 - [The OWASP Top 10 LLM Risks 2025](https://genai.owasp.org/llm-top-10/)
