--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -16,7 +16,7 @@ The following is a visual map of threats on the AI Sytstem Architecture:
 
 ---
 
-## OWASP Threats Mapping Table
+## OWASP Security Threats Mapping Table
 
 Given the above results, the following is a table with the 20 initial threats we did extract fro the OWASP Top 10 LLM 2025 and the OWASP AI Exchange Threats.
 We added the related test name.
