--- a/Document/content/2.2_Identify_AI_System_RAI_and_Trustworthy_threats.md
+++ b/Document/content/2.2_Identify_AI_System_RAI_and_Trustworthy_threats.md
@@ -14,9 +14,7 @@ Before we review it, let's briefly revisit key Trustworthy AI concepts defined b
 - Privacy & Data Governance: Personal data must be respected and protected.
 - Human Agency & Oversight: AI systems should not undermine human autonomy or create excessive agency.
 - Accountability: Clear responsibility mechanisms must exist for AI decisions.
-- Based on these concepts, we carefully revise your previous identification of threats:
-
-Back to the AI System Architecure, we need to perform a more deeply TM. Here is the result:
+Based on these concepts, we carefully revise your previous identification of threats:
 
 
 
